tests/fixtures/pass/throw_unit_error.sali
let fail(): Result(i32, ()) = {
  throw ()
}

let main(): i32 = fail() ?? 42
