tests/fixtures/fail/match_scalar_non_exhaustive.sali
let main(): i32 = 42 match {
  42 => 42,
}
